--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "nodemon": "^3.1.10",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-icons": "^5.5.0"
+    "react-fast-marquee": "^1.6.5",
+    "react-icons": "^5.5.0",
+    "swiper": "^11.2.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
