--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^5.5.0",
     "react-simple-typewriter": "^5.0.1",
-    "swiper": "^11.2.7"
+    "swiper": "^11.2.7",
+    "typewriter-effect": "^2.22.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
